# autodoc-pydantic-mwe

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
docs/: conf.py  index.md
src/autodoc_pydantic_mwe/: __about__.py  __init__.py  test.py
