[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autodoc-pydantic-mwe"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "Helge Eichhorn", email = "git@helgeeichhorn.de" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pydantic~=2.5",
  "sphinx~=7.2",
  "myst-parser~=2.0",
  "autodoc_pydantic",
]